[package]
name = "type_speed_backend"
version = "0.1.0"
authors = ["Dmitry <mailSD@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0.5"
actix-cors = "0.2.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
#serde_json = "1.0"
serde_derive = "1.0.0"

bson = "0.14.1"
mongodb = "0.10.0"
futures = "0.3.0"

env_logger = "0.7.1"

